# dakitlab

./: LICENSE.txt  README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/dakitlab/: __about__.py  __init__.py  table.py
src/dakitlab/.github/workflows/: publish.yml
tests/: __init__.py
